--- a/css/thumbnail_image_left_carousel_new.css
+++ b/css/thumbnail_image_left_carousel_new.css
@@ -62,7 +62,7 @@
   top: 50px;
   left: 15%;
   opacity: 1;
-  z-index: 10;
+  z-index: 1000;
   width: 100%;
 }
 
@@ -73,7 +73,7 @@
   top: 150px;
   text-align: left;
   text-shadow: none;
-  z-index: 10;
+  z-index: 1000;
 }
 .thumbnail_image_left_carousel_caption h1{
   font-size: 35px;
